--- a/Springboard365.Tools.DynamicsCrm.Common/Springboard365.Tools.DynamicsCrm.Common.csproj
+++ b/Springboard365.Tools.DynamicsCrm.Common/Springboard365.Tools.DynamicsCrm.Common.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{64D1A673-2607-436B-BF09-B40986B25E83}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Springboard365.DynamicsCrm.Tools.Common</RootNamespace>
-    <AssemblyName>Springboard365.DynamicsCrm.Tools.Common</AssemblyName>
+    <RootNamespace>Springboard365.Tools.DynamicsCrm.Common</RootNamespace>
+    <AssemblyName>Springboard365.Tools.DynamicsCrm.Common</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
