--- a/src/DynamicsCrm.Common.csproj
+++ b/src/DynamicsCrm.Common.csproj
@@ -96,7 +96,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Build\NuGetPush.bat" />
+    <None Include="DynamicsCrm.Common.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
