--- a/src/DynamicsCrm.Common.nuspec
+++ b/src/DynamicsCrm.Common.nuspec
@@ -1,17 +1,26 @@
 <?xml version="1.0"?>
-<package >
+<package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
     <id>$id$</id>
     <version>$version$</version>
-    <title>$title$</title>
-    <authors>Springboard 365 Ltd</authors>
-    <owners>$author$</owners>
+    <title>$id$</title>
+    <authors>$author$</authors>
+    <repository type="git" url="$repo$"/>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>The common library for building console application tools that require a Dynamics 365 connection (IOrganizationService).</description>
-    <copyright>Copyright Springboard 365 Ltd 2020</copyright>
-    <tags>Microsoft Dynamics 365 CRM 2011 2013 2015 2016 SDK XRM 365 D365 Power Platform Tools</tags>
-    <dependencies>
-		<group targetFramework=".NETFramework4.6.2" />
-    </dependencies>
+    <description>$description$</description>
+    <copyright>Copyright $author$ 2020</copyright>
+    <tags>$tags$</tags>
   </metadata>
+  <dependencies>
+    <group targetFramework=".NETFramework4.6.2">
+      <dependency id="Springboard365.Tools.CommandLine.Core" version="2.0.0-alpha01" />
+      <dependency id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.1.0.51" />
+      <dependency id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.23" />
+      <dependency id="Microsoft.CrmSdk.Deployment" version="9.0.2.23" />
+      <dependency id="Microsoft.CrmSdk.Workflow" version="9.0.2.23" />
+      <dependency id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.19.8" />
+      <dependency id="Microsoft.Rest.ClientRuntime" version="2.3.20" />
+      <dependency id="Newtonsoft.Json" version="10.0.3" />
+    </group>
+  </dependencies>
 </package>
