fix: Fix incorrect nuspec file that did not output library assembly.

--- a/src/DynamicsCrm.Common.nuspec
+++ b/src/DynamicsCrm.Common.nuspec
@@ -23,4 +23,7 @@
       </group>
     </dependencies>
   </metadata>
+  <files>
+    <file src="bin\$Configuration$\Springboard365.Tools.DynamicsCrm.Common.dll" target="lib\net462\Springboard365.Tools.DynamicsCrm.Common.dll" />
+  </files>
 </package>
