--- a/src/DynamicsCrm.Common.csproj
+++ b/src/DynamicsCrm.Common.csproj
@@ -64,7 +64,7 @@
     </Reference>
     <Reference Include="PresentationFramework" />
     <Reference Include="Springboard365.Tools.CommandLine.Core, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>$(SolutionDir)\packages\Springboard365.Tools.CommandLine.Core.2.0.0-alpha03\lib\net462\Springboard365.Tools.CommandLine.Core.dll</HintPath>
+      <HintPath>$(SolutionDir)\packages\Springboard365.Tools.CommandLine.Core.2.0.0\lib\net462\Springboard365.Tools.CommandLine.Core.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Activities" />
